<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

       <Button
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/regularcollection"
        android:id="@+id/btnRegularCollections" />

    <Button
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/odcollection"
        android:id="@+id/btnODCollections" />

    <Button
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/advcollection"
        android:id="@+id/btnADVCollections" />

    <Button
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/npscollection"
        android:visibility="gone"
        android:id="@+id/btnNPSReports" />
 
</LinearLayout>