<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@color/header_color"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_merch_id"
                android:layout_width="fill_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:layout_toLeftOf="@+id/iv_calc"
                android:background="@drawable/merchant_box"
                android:hint="@string/merch_id"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_merch_pin"
                android:layout_width="fill_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/merchant_box"
                android:hint="@string/merch_pin"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_aadhaar"
                android:layout_width="fill_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/merchant_box"
                android:hint="@string/aadhaar_number"
                android:inputType="numberSigned"
                android:maxLength="12"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="fill_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/merchant_box"
                android:hint="@string/mobile_number"
                android:inputType="numberSigned"
                android:maxLength="12"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/et_amount"
                android:layout_width="fill_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/merchant_box"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_remarks"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/merchant_box"
                android:hint="@string/remarks"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_fingpay"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/launch"
                android:textColor="@android:color/white"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tv_transaction"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="gone" />


            <TextView
                android:id="@+id/tv_trans_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/header_color"
                android:textSize="20sp"
                android:visibility="gone" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>