<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btnRegularCollections"
                    android:gravity="center"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:backgroundTint="@color/btcolor"
                    android:background="@drawable/regular"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/regularcollection"/>
            </LinearLayout>

            <LinearLayout

                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btnODCollections"
                    android:gravity="center"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/overdue"
                    android:backgroundTint="@color/btcolor"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/odcollection"/>
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btnADVCollections"
                    android:gravity="center"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/advance"
                    android:backgroundTint="@color/btcolor"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/advcollection"/>
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btnALateollections"
                    android:gravity="center"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/regular"
                    android:backgroundTint="@color/btcolor"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/latecollection"/>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>